# python-sdk

./: README.md  pyproject.toml
examples/: advanced_retry.py  basic_usage.py  openai_integration.py  quick_start.py
src/vizeval/: __init__.py  client.py  evaluators.py  exceptions.py  models.py  openai_wrapper.py
tests/: test_basic.py
